@@ -4,7 +4,7 @@ require_once 'editor.inc.php';
 require_once 'Weathermap.class.php';
 
 // so that you can't have the editor active, and not know about it.
-$ENABLED=true;
+$ENABLED=false;
 
 if(! $ENABLED)
 {
